gobmkida/g3/print_top_moves
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/print_top_moves/src/engine/value_moves.c:3178:12: error: expected expression
*( _OWORD *)best_moves = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/print_top_moves/src/engine/value_moves.c:3178:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)best_moves = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/print_top_moves/src/engine/value_moves.c:3189:12: error: expected expression
*( _OWORD *)&best_moves[4] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/print_top_moves/src/engine/value_moves.c:3189:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&best_moves[4] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/print_top_moves/src/engine/value_moves.c:3190:12: error: expected expression
*( _OWORD *)best_move_values = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/print_top_moves/src/engine/value_moves.c:3190:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)best_move_values = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/print_top_moves/src/engine/value_moves.c:3191:12: error: expected expression
*( _OWORD *)&best_move_values[4] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/print_top_moves/src/engine/value_moves.c:3191:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&best_move_values[4] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/print_top_moves/src/engine/value_moves.c:3349:19: error: use of undeclared identifier 'dword_A2B05C'
v27 = *( float *)&dword_A2B05C[v26]; 
                  ^
9 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/print_top_moves/src/obj/1/value_moves.o] Error 1
